--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -16,3 +16,10 @@
     <%= form.label :content %>
     <%= form.text_field :content %>
   </div>
+
+
+  <div class="submit">
+    <%= form.submit %>
+  </div>
+
+<% end %>
